# metriker

./: .gitignore  .pre-commit-config.yaml  README.md  logging.ini  pyproject.toml  test.py
.github/workflows/: clean-code.yml
database_utils/: README.md  pyproject.toml
database_utils/database_utils/: __init__.py  activity_handler.py  database_connector.py  schema.py  user_handler.py
metriker_app/: README.md  entrypoint.py  pyproject.toml
metriker_app/metriker_app/: __init__.py  app_layout.py  config.py  main.py  metriker.py
metriker_app/metriker_app/pages/: __init__.py  challenge_page.py  data_privacy_page.py  login_page.py  user_page.py
metriker_app/metriker_app/views/: __init__.py  base_view.py  challenge_content.py  challenges_view.py  data_privacy_view.py  login_view.py  user_view.py
strava_ingestion_service/: Dockerfile  README.md  pyproject.toml
strava_ingestion_service/strava_ingestion_service/: __init__.py  config.py  endpoints.py  main.py  strava_handler.py
strava_webhook_service/: README.md  pyproject.toml
strava_webhook_service/strava_webhook_service/: __init__.py  config.py  dependencies.py  endpoints.py  main.py  schemas.py
