[tool.poetry]
name = "metriker"
version = "0.1.0"
description = ""
authors = ["chris <58859629+christophschaller@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
sqlalchemy = "^2.0.2"
fastapi = "^0.90.0"
flet = "^0.4.0"
requests = "^2.28.2"
sentry-sdk = "^1.15.0"
cryptography = "^39.0.1"
ruff = "^0.0.260"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.0.4"
python-dotenv = "^0.21.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.ps1
  |\.git
  |\.ini
  |Dockerfile
  |docker-compose.yml
)/
'''

[tool.ruff]
select = [
    "E", "W", "F", "B", "C", "N", "D", "I", "ANN", "S", "A", "COM", "C4", "DTZ", "EM", "ISC", "ICN", "G", "PIE", "T20",
    "RET", "SLF", "SIM", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PLE", "PLR", "PLW", "TRY", "RUF"] # , "UP"]

ignore = [
    "ANN002", # annotating *args ... let me think about that
    "ANN003", # annotating **kwargs ... let me think about that
    "ANN101" # annotating self seems to me like its adding clutter
]

line-length = 120
# target-version = "py39"

# Group violations by containing file.
format = "grouped"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-annotations]
# suppress ANN* rules for any declaration that hasn't been typed at all
ignore-fully-untyped = true
# dont require annotation of __init__ return
mypy-init-return = true
# dont require annotation of _
suppress-dummy-args = true
