[tool.poetry]
name = "metriker-app"
version = "0.1.0"
description = ""
authors = ["chris <58859629+christophschaller@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "metriker_app" }]

[tool.poetry.dependencies]
python = "^3.9"
flet = "^0.4.0"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
sentry-sdk = "^1.18.0"
cryptography = "^41.0.2"


[tool.poetry.group.dev.dependencies]
database-utils = { path = "../database_utils", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend = "../pyproject.toml"
