[tool.poetry]
name = "strava-webhook-service"
version = "0.1.0"
description = ""
authors = ["chris <58859629+christophschaller@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "strava_webhook_service" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "^0.91.0" }
requests = "^2.31.0"
sentry-sdk = { extras = ["fastapi"], version = "^1.15.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend = "../pyproject.toml"
